force-app/main/default/objects/Matter_Expense__c/Matter_Expense__c.object-meta.xml
<CustomObject>
    <label>Matter Expense</label>
    <nameField>
        <displayFormat>ME-{00000}</displayFormat>
        <label>Matter Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>