force-app/main/default/objects/Matter_Expense__c/fields/Brief_Summary__c.field-meta.xml
<CustomField>
    <fullName>Brief_Summary__c</fullName>
    <label>Brief Summary</label>
    <type>TextArea</type>
</CustomField>