force-app/main/default/objects/Matter_Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Air Travel</fullName>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Local Counsel</fullName>
            </value>
            <value>
                <fullName>Other Lawyer</fullName>
            </value>
            <value>
                <fullName>Fact Development</fullName>
            </value>
            <value>
                <fullName>Filing Fees</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>