force-app/main/default/objects/Matter_Expense__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>