force-app/main/default/objects/Matter_Expense__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>